# spotli

./: pyproject.toml
src/spotli/: __init__.py  authorization.py  cli.py  commons.py  exceptions.py  player.py  player_models.py  spotify_api.py
src/spotli/base/: api.py  authorization.py  exceptions.py  models.py
src/spotli/player/: api.py  commands.py  models.py  player.py
